--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="material/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="material/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="material/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Plantas Medicinais</title>
 </head>
 <body>
     
+    <div class="container">
+        <header>
+                <div class="img-wrapper">
+                    <img src="./material/fotos/lucas-de-moura-sjbMq1aSYOw-unsplash.jpg" alt="">
+                </div>
+                    <div class="banner">
+                        <h1>Plantas Medicinais & Curiosidades</h1>
+                        <p>Por Marilia Mendonça</p>
+                        <button>Saiba mais</button>
+                    </div>
+            
+        </header>
+    </div>
+
 </body>
 </html>
