--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -9,23 +10,49 @@
     <link rel="icon" type="image/png" sizes="32x32" href="material/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="material/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <script src="https://kit.fontawesome.com/8498d06d2f.js" crossorigin="anonymous"></script>
     <title>Plantas Medicinais</title>
 </head>
 <body>
     
     <div class="container">
+
+        <div class="hamburguer">
+            <div class="line" id="line1"></div>
+            <div class="line" id="line2"></div>
+            <div class="line" id="line3"></div>
+            <span>fechar</span>
+        </div>
+
         <header>
                 <div class="img-wrapper">
                     <img src="./material/fotos/lucas-de-moura-sjbMq1aSYOw-unsplash.jpg" alt="">
                 </div>
                     <div class="banner">
                         <h1>Plantas Medicinais & Curiosidades</h1>
-                        <p>Por Marilia Mendonça</p>
+                        <p>By Marilia Castro</p>
                         <button>Saiba mais</button>
                     </div>
             
         </header>
+        <div class="sidebar">
+            <nav>
+                <url class="menu">
+                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Documentos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Catalogo</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Curiosidades</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+                </url>
+            </nav>
+            <div class="social-media">
+                <a href=""><i class="fab fa-facebook"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fa-solid fa-envelope"></i></i></a>
+            </div>
+        </div>
     </div>
 
 </body>
+<script src="script.js"></script>
 </html>
