--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
                     <div class="banner">
                         <h1>Plantas Medicinais & Curiosidades</h1>
                         <p>By Marilia Castro</p>
-                        <button>Saiba mais</button>
+                        <a href="./docs&pdfs/Cartilha-do-Relógio-Medicinal-Oficial.pdf" target="_blank"><button>Saiba mais</button></a>
                     </div>
             
         </header>
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <url class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Documentos</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Catalogo</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Curiosidades</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">PDFs&Docs</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">DATAPLANT</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Relógio Medicinal</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Catálogo de Plantas</a></li>
                 </url>
             </nav>
             <div class="social-media">
@@ -50,7 +50,115 @@
                 <a href=""><i class="fab fa-instagram"></i></a>
                 <a href=""><i class="fa-solid fa-envelope"></i></i></a>
             </div>
-        </div>
+        </aside>
+
+        <section class="sessao-conhecimentos" id="conhecimentos">
+            <div class="sessao-header">
+            <h1 id="curiosidadesh1">Curiosidades</h1>
+            </div>
+            <div class="conhecimentos">
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                <i class="fa-brands fa-pagelines"></i>
+                <h3>O que são</h3>
+                </div>
+                <div class="conhecimento-text">
+                <p>Plantas medicinais são aquelas usadas na preparação de remédios. Milhares de espécies vegetais são usadas em todo o mundo na preparação dos remédios caseiros. Esses usos vêm do conhecimento popular ou tradicional de cada país.</p>
+                </div>
+            </div>
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <h3>Como reconhecer</h3>
+                </div>
+                <div class="conhecimento-text">
+                <p>É muito importante conhecer a parte da planta que será usada na preparação do remédio, pois as substâncias ativas podem estar presentes em diferentes partes do vegetal.</p>
+                </div>
+            </div>
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                    <i class="fa-solid fa-seedling"></i>
+                <h3>Como usar</h3>
+                </div>
+                <div class="conhecimento-text">
+                <p>A forma de preparação do remédio depende do tipo de substâncias ativas que a planta contém. No caso dos chás medicinais, se for uma planta aromática, deve-se preparar a infusão, pois as substâncias se perdem facilmente com o calor.</p>
+                </div>
+            </div>
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                    <i class="fa-solid fa-clock"></i>
+                <h3>O que é relógio medicinal?</h3>
+                </div>
+                <div class="conhecimento-text">
+                <p>O Relógio Medicinal é umaorganização de plantas comcaracterísticas medicinais divididasem doze canteiros, cada canteirorefere-se a um órgão ou sistemado corpo humano, incluindo umcanteiro com PANC's (PlantasAlternativas Não Convencionais).</p>
+                </div>
+            </div>
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                    <i class="fa-sharp fa-solid fa-vial"></i>
+                <h3>A Fitoterapia no relógio medicinal</h3>
+                </div>
+                <div class="conhecimento-text">
+                <p>Segundo Maury e Rudder(2002), a fitoterapia é a forma detratamento mais simples enatural, onde a ideia é tratar ouprevenir doenças graças a certospreparados vegetais ou aosprincípios ativos que deles sepode extrair. Dos canteiros dorelógio medicinal, podemosretirar plantas para confecção defitoterápicos, como os chás, porexemplo.</p>
+                </div>
+            </div>
+            <div class="conhecimento">
+                <div class="conhecimento-header">
+                    <i class="fa-solid fa-leaf"></i>
+                <h3>benefícios da fitoterapia</h3>
+                </div>
+                <div class="conhecimento-text">
+                <p>Além da positiva atuação nos tratamentos de saúde, a fitoterapia apresenta outros benefícios, como a composição natural, a biodiversidade disponível e menos efeitos colaterais. Acompanhe a seguir mais detalhes de cada um deles.</p>
+                </div>
+            </div>
+            <div class="conhecimentos-img-wrapper">
+                <img src="./material/cientistas.png" alt="imagem-cientistas">
+            </div>
+            </div>
+        </section>
+
+        <section class="sessao-modulos">
+            <div class="sessao-header">
+                <h1 id="saibamaiscard">Saiba mais</h1>
+            </div>
+            <div class="modulos">
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="./material/cardplanta.jpg" alt="imagem do Data Plant">
+                    </div>
+                    <div class="card-info">
+                        <h2>Data Plant</h2>
+                        <h3>Banco de dados</h3>
+                        <p>Banco de dados e amostras de plantas medicinais da IFSC</p>
+                        <a href="./dataplant/dataplant.html"><button>Saiba Mais</button></a>
+                    </div>
+                </div>
+                
+                    <div class="card">
+                        <div class="card-img-wrapper">
+                            <img src="./material/fotos/Relogio-natural--17-_169954.jpeg" alt="Cartilha Relógio Medicial">
+                        </div>
+                        <div class="card-info">
+                            <h2>Relógio Medicinal</h2>
+                            <h3>Cartilha sobre Relógio Medicinal</h3>
+                            <p>O Relógio Medicinal é uma organização de plantas com características medicinais divididas em doze canteiros.</p>
+                            <a href="./docs&pdfs/Cartilha-do-Relógio-Medicinal-Oficial.pdf" target="_blank"><button>Saiba Mais</button></a>
+                        </div>
+                    </div>
+
+                        <div class="card">
+                            <div class="card-img-wrapper">
+                                <img src="./material/fotos/jonathan-borba-TB6bxZiMhpI-unsplash.jpg" alt="Quem Somos">
+                            </div>
+                                <div class="card-info">
+                                <h2>Nossa História</h2>
+                                <h3>Como tudo íniciou</h3>
+                                <p>Projeto de extensão, relógio medicinal: Educando para a Saúde</p>
+                                <a href="./sobrenos/sobrenos.html"><button>Saiba Mais</button></a>
+                            </div>
+                    </div>
+            </div>
+        </section>
     </div>
 
 </body>
